tests/cases/compiler-development/artifact/errors/diagnostic-generic-specialization-name-conflict.diagnostic
diagnostic error code=T0001 family=type message="generic specialization 'identity__G_i64' conflicts with an existing function; rename the concrete function or the generic function" sources=1 labels=3 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-specialization-name-conflict.ari" display="tests/cases/generics/errors/generic-specialization-name-conflict.ari" bytes=162
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-specialization-name-conflict.ari" line=10 column=10 end_line=10 end_column=18 byte_start=142 byte_end=150 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-specialization-name-conflict.ari:10:10\n    |\n 10 |   return identity<i64>(1);\n    |          ^^^^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/generics/errors/generic-specialization-name-conflict.ari" line=5 column=4 end_line=5 end_column=19 byte_start=54 byte_end=69 message="existing function 'identity__G_i64' occupies this specialization name"
  Snippet label=1 text="  --> tests/cases/generics/errors/generic-specialization-name-conflict.ari:5:4\n   |\n 5 | fn identity__G_i64(value: i64) -> i64 {\n   |    ^^^^^^^^^^^^^^^"
  Label index=2 role=secondary source_id=0 source="tests/cases/generics/errors/generic-specialization-name-conflict.ari" line=1 column=4 end_line=1 end_column=12 byte_start=3 byte_end=11 message="generic function 'identity' specializes into deterministic concrete function names"
  Snippet label=2 text="  --> tests/cases/generics/errors/generic-specialization-name-conflict.ari:1:4\n   |\n 1 | fn identity[T](value: T) -> T {\n   |    ^^^^^^^^"
  Note index=0 location=none message="generic specializations share the executable function namespace with concrete functions"
  Help index=0 location=none message="rename 'identity__G_i64' or choose a generic function name that cannot produce this specialization name"
